deploy/k8s/base/mock-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-mock-provider
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: notif-mock-provider
  template:
    metadata:
      labels:
        app: notif-mock-provider
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: notif-mock-provider
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: notif-mock-provider
      containers:
        - name: mock-provider
          image: notif-mock-provider:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: notif-mock-provider-svc
  labels:
    app: notif-mock-provider
spec:
  type: ClusterIP
  selector:
    app: notif-mock-provider
  ports:
    - name: http
      port: 80
      targetPort: 8080
